[gd_scene load_steps=10 format=2]

[ext_resource path="res://Data/Scripts/Ball.gd" type="Script" id=1]
[ext_resource path="res://Assets/actors.png" type="Texture" id=2]
[ext_resource path="res://Assets/trajectory.png" type="Texture" id=3]
[ext_resource path="res://Data/Scenes/Actors/TrajectoryGhost.tscn" type="PackedScene" id=4]

[sub_resource type="Gradient" id=5]
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0.196078 )

[sub_resource type="CircleShape2D" id=2]
radius = 6.0

[sub_resource type="Curve" id=4]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 10, 10 )

[sub_resource type="CircleShape2D" id=1]
radius = 3.0

[node name="Ball" type="KinematicBody2D"]
collision_mask = 2
script = ExtResource( 1 )
TrajGhost = ExtResource( 4 )

[node name="Launcher" type="Node2D" parent="."]

[node name="TrajectoryLine" type="Line2D" parent="Launcher"]
default_color = Color( 1, 1, 1, 1 )
gradient = SubResource( 5 )
texture = ExtResource( 3 )
texture_mode = 1

[node name="Aim" type="Position2D" parent="Launcher"]

[node name="PowerLine" type="Line2D" parent="Launcher"]
z_index = 4096
z_as_relative = false
points = PoolVector2Array( 0, 0, 0, 0 )
width = 1.5
default_color = Color( 1, 1, 1, 1 )

[node name="ClickableZone" type="Area2D" parent="Launcher"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Launcher/ClickableZone"]
shape = SubResource( 2 )

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
emitting = false
amount = 5
lifetime = 0.5
local_coords = false
direction = Vector2( 1, 1 )
gravity = Vector2( 0, 0 )
scale_amount = 4.0
scale_amount_curve = SubResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
texture = SubResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
editor_draw_screen = false

[node name="CamTarget" type="Position2D" parent="."]

[node name="Sprite" type="Sprite" parent="CamTarget"]
visible = false
scale = Vector2( 0.25, 0.25 )

[connection signal="mouse_entered" from="Launcher/ClickableZone" to="." method="_on_ClickableZone_mouse_entered"]
[connection signal="mouse_exited" from="Launcher/ClickableZone" to="." method="_on_ClickableZone_mouse_exited"]
